--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "request": "^2.88.0",
-    "sequelize": "^5.15.0"
+    "sequelize": "^5.15.0",
+    "sequelize-cli": "^5.5.1"
   }
 }
