--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "request": "^2.88.0",
-    "sequelize": "^5.15.0",
+    "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1"
+  },
+  "engines": {
+    "node": "10.16.2"
   }
 }
